--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^8.0",
         "geocoder-php/common-http": "^4.0",
         "geocoder-php/pelias-provider": "^1.0",
-        "willdurand/geocoder": "^4.0"
+        "willdurand/geocoder": "^4.0|^5.0"
     },
     "provide": {
         "geocoder-php/provider-implementation": "1.0"
